<resources>
    <string name="app_name">Tasdjilati</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bienvenu</string>
    <string name="update_school_info">Modifier les infos de l\'ecole</string>
    <string name="change_language">Modifier la langue</string>
    <string name="parametres">Parametres</string>
    <string name="add_student">Ajouter un élève</string>
    <string name="name">Nom</string>
    <string name="surname">Prenom</string>
    <string name="birth_date">Date de naissance</string>
    <string name="year">L\'annee scholaire</string>
    <string name="classe">La classe</string>
    <string name="num_1">Nummero de telephone 1</string>
    <string name="num_2">Nummero de telephone 2</string>
    <string name="address">Addresse</string>
    <string name="menu_de_semaine">Menu de semaine</string>
    <string name="dimanche">Dimanche</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="send_menu">Envoyer le menu</string>
    <string name="chhose_language">Choisisez une langue</string>
    <string name="francais">Francais</string>
    <string name="arabe">Arabe</string>
    <string name="convocation_content">Contenu de convocation</string>
    <string name="send_message">Envoyer le message</string>
    <string name="message_content">Contenu de message</string>
    <string name="exams">Examens</string>
    <string name="tests">Devoirs</string>
    <string name="trips">Excursions</string>
    <string name="holidays">Vacances</string>
    <string name="registrations">Inscriptions</string>
    <string name="other">Autre</string>
    <string name="enter">Entrée</string>
    <string name="exit">Sortie</string>
    <string name="subscription">Abonnements</string>
    <string name="events">Evenements</string>
    <string name="restaurant">La cantine</string>
    <string name="convocations">Convocations</string>
    <string name="manage_students">Gérer vos élèves</string>
    <string name="desc_manage_students">Vous pouvez ajouter, supprimer et modifier vos élèves.</string>
    <string name="terminate">Terminer</string>
    <string name="cancel">Annuler</string>
    <string name="name_school">Nom de l\'ecole</string>
    <string name="update_info">Modifier les infos</string>
    <string name="define_alarm">Definir un rappel</string>
    <string name="remind_me">Rappeler moi</string>
    <string name="label_qr_code">Exporter QR code pdf</string>
    <string name="label_import">Importer fichier excel</string>
    <string name="start">Commencer</string>
    <string name="destination">Destination</string>
    <string name="id" translatable="false">Id</string>
    <string name="transport">Transport</string>
    <string name="modifier_un_eleve">Modifier un eleve</string>

</resources>