<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.canteen.CanteenMenuFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/menu_de_semaine"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_day1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:maxLength="13"
                android:hint="@string/dimanche"
                android:inputType="textPersonName"
                android:layout_marginTop="32dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"/>

            <EditText
                android:id="@+id/et_day2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/lundi"
                android:maxLength="13"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_day1"/>

            <EditText
                android:id="@+id/et_day3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/mardi"
                android:maxLength="13"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_day2"/>

            <EditText
                android:id="@+id/et_day4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/mercredi"
                android:maxLength="13"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_day3"/>

            <EditText
                android:id="@+id/et_day5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/jeudi"
                android:maxLength="13"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_day4"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_menu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/send_menu"
                android:background="@drawable/button_blue_shape"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/et_day5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
