<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF1F3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.events.EventsFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_exams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="100dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:padding="8dp"
                    android:src="@drawable/exam" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/exams"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="100dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:padding="8dp"
                    android:src="@drawable/test" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tests"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="100dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:padding="8dp"
                    android:src="@drawable/trip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/trips"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_holidays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="100dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:padding="8dp"
                    android:src="@drawable/holidays" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/holidays"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/card_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="100dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:padding="8dp"
                    android:src="@drawable/registration" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/registrations"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="100dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:padding="8dp"
                    android:src="@drawable/more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/other"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>